test/classes/diten/test_scope_resolve_classes.good
test_scope_resolve_classes.chpl:13: error: cannot resolve base type for method 'foo'
